# nidonnaesan-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  application_comment.py  campaign_client.py  campaign_filters.py  campaign_formatter.py  campaign_geo.py  channel_profile.py  experience_value.py  naver_shopping.py  nepmoosae_server.py  nidonnaesan_server.py  profile_store.py  pyproject.toml  templates.py  term_helper.py  tips_loader.py  tone_profiles.py  tool_descriptions.py
docs/: DEPLOY_KC.md  FEATURE_SPEC.md  KAKAOTALK_TOOL_TESTS.md  MCP_CLIENT_ROUTING.md  PLAYMCP_EXAMPLES.md  PROJECT_STRUCTURE.md  기능설명서.md
scripts/: sync_blogreviewzip_tips.py  sync_campaigns.py  validation_playmcp_scenarios.py  validation_random.py  validation_tool_tests.py  validation_tool_tests_v2.py  validation_tool_tests_v3.py
server/: __init__.py
src/: __init__.py  application_comment.py  aptitude_test.py  bootstrap.py  campaign_client.py  campaign_filters.py  campaign_formatter.py  campaign_output.py  campaign_recommender.py  campaign_resolver.py  campaign_sync.py  channel_profile.py  constants.py  experience_value.py  filter_aliases.py  mcp_tool_result.py  naver_shopping.py  price_enrichment.py  product_research.py  profile_store.py  risk_engine.py  runtime_paths.py  tips_loader.py  tool_descriptions.py
tests/: conftest.py  test_application_comment.py  test_aptitude_test.py  test_campaign_client_resolve.py  test_campaign_filters.py  test_campaign_geo.py  test_campaign_recommender.py  test_campaign_resolver.py  test_channel_profile.py  test_experience_value.py  (+6 more)
(+65 files in other folders)
